tests/negative/gold/assign_self_test.gold
tests/negative/assign_self_test.toit:3:9: warning: Assigning local to itself
  local = local
        ^
tests/negative/assign_self_test.toit:4:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/assign_self_test.toit:10:11: warning: Assigning local to itself has no effect. Did you forget 'this.'?
    field = field
          ^
tests/negative/assign_self_test.toit:16:11: warning: Assigning local to itself
    field = field
          ^
tests/negative/assign_self_test.toit:13:11: warning: Assigning local to itself has no effect. Did you forget 'this.'?
    field = field
          ^
Compilation failed.
